cambio en index

--- a/KatherineRivera_index.html
+++ b/KatherineRivera_index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <main>
-     <section>
+     <section class="seccion-vertical">
          <h1>Noticias</h1>
          <article class="noticia-destacada">
              <h2>Lorem, ipsum dolor.</h2>
@@ -31,20 +31,20 @@
              <h2>Tempora, numquam omnis!</h2>
              <p>Minus, eius obcaecati libero, omnis officiis quaerat natus aut quisquam incidunt error soluta impedit molestias sapiente, atque mollitia ipsum aliquid.</p>
          </article>
-         <article class="articulo" id="este-articulo">
+         <article class="noticia" id="esta-noticia">
              <h2>Culpa, quo rem.</h2>
              <p>Consequuntur molestias odit corporis eveniet, cupiditate quibusdam ut asperiores, ducimus consequatur ullam, sed at aliquam quae voluptatum placeat alias numquam?</p>
          </article>
-         <article class="articulo">
+         <article class="noticia">
              <h2>Sit, numquam aut!</h2>
              <p>Accusamus minima perferendis corrupti soluta debitis, odio harum. Magni unde, veniam vel amet explicabo laudantium obcaecati aspernatur! Ad, distinctio similique?</p>
          </article>
-         <article class="articulo">
+         <article class="noticia">
              <h2>Magni, amet voluptas!</h2>
              <p>Ab aspernatur sit non. Asperiores sed consequuntur, amet animi quam rem sint cupiditate. Provident hic, aspernatur aliquid rerum atque vel.</p>
          </article>
      </section>
-     <section>
+     <section class="seccion-vertical">
          <h1>Portafolios</h1>
          <article>
              <h2>Lorem, ipsum.</h2>
