Cambios en los links para enlazar los archivos

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -8,8 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="paqueteShared.css">
-    <link rel="stylesheet" href="/paquetes/packages.css">
-    <link rel="stylesheet" href="/paquetes/paquetesindex.html">
     <link rel="stylesheet" href="mainc2.css"> 
 </head>
 
@@ -22,7 +20,7 @@
         </div><nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="/paquetes/paquetesindex.html">Paquetes</a>
+                    <a href="file:///C:/Users/Kasita/Desktop/mi%20sitio%20web/paquetes/paquetesindex.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
                     <a href="clientes/Carpeta2_Rivera.html">Clientes</a>
