--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uHost</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/paqueteShared.css">
+    <link rel="stylesheet" href="../paqueteShared.css">
     <link rel="stylesheet" href="packages.css">
 </head>
 
 <body>
     <header class="titulo-principal">
         <div>
-            <a href="/Carpeta2_Rivera.html" class="main-header_brand">
+            <a href="../Carpeta2_Rivera.html" class="main-header_brand">
                 uHost
             </a>
         </div><nav class="main-nav">
