Cambio del formato de las secciones

--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -31,7 +31,27 @@
         </nav>        
     </header>
     <main>
-
+        <section class="package">
+            <a href="#">
+                <h1>Nuestro Plan PLUS</h1>
+                <h2>La elección más popular de nuestro clientes</h2>
+                <p>Beneficios de mejorar el almacenamiento y la rapidez del soporto técnico para lograr tus objetivos </p>
+            </a>
+        </section>
+        <section class="package">
+            <a href="#">
+                <h1>Nuestro Plan GRATIS</h1>
+                <h2>Un sólido inicio en el mundo del Hosting</h2>
+                <p>¡Empieza de inmediato sin costo!</p>
+            </a>
+        </section>
+        <section class="package">
+            <a href="#">
+                <h1>Nuestro Plan PREMIUM</h1>
+                <h2>Todo lo que tu empresa necesita. Soporte instantáneo, garantía</h2>
+                <p>La mejor solución por pequeños y grandes empresarios  ¡Porque el Hosting no debería ser un obstáculo!</p>
+            </a>
+        </section>
     </main>
     <footer class="main-footer">
         <nav>
