Cambios en los recuadros de los paquetes

--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -31,25 +31,25 @@
         </nav>        
     </header>
     <main>
-        <section class="package">
+        <section class="package" id="plus">
             <a href="#">
-                <h1>Nuestro Plan PLUS</h1>
-                <h2>La elección más popular de nuestro clientes</h2>
-                <p>Beneficios de mejorar el almacenamiento y la rapidez del soporto técnico para lograr tus objetivos </p>
+                <h1 class="package__title">Nuestro Plan PLUS</h1>
+                <h2 class="package__subtitle">La elección más popular de nuestro clientes</h2>
+                <p class="package__info">Beneficios de mejorar el almacenamiento y la rapidez del soporte técnico para lograr tus objetivos </p>
             </a>
         </section>
-        <section class="package">
+        <section class="package" id="gratis">
             <a href="#">
-                <h1>Nuestro Plan GRATIS</h1>
-                <h2>Un sólido inicio en el mundo del Hosting</h2>
-                <p>¡Empieza de inmediato sin costo!</p>
+                <h1 class="package__title">Nuestro Plan GRATIS</h1>
+                <h2 class="package__subtitle">Un sólido inicio en el mundo del Hosting</h2>
+                <p class="package__info">¡Empieza de inmediato sin costo!</p>
             </a>
         </section>
-        <section class="package">
+        <section class="package" id="premium">
             <a href="#">
-                <h1>Nuestro Plan PREMIUM</h1>
-                <h2>Todo lo que tu empresa necesita. Soporte instantáneo, garantía</h2>
-                <p>La mejor solución por pequeños y grandes empresarios  ¡Porque el Hosting no debería ser un obstáculo!</p>
+                <h1 class="package__title">Nuestro Plan PREMIUM</h1>
+                <h2 class="package__subtitle">Todo lo que tu empresa necesita. Soporte instantáneo, garantía</h2>
+                <p class="package__info">La mejor solución por pequeños y grandes empresarios  ¡Porque el Hosting no debería ser un obstáculo!</p>
             </a>
         </section>
     </main>
