--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -45,6 +45,7 @@
                 <p class="package__info">¡Empieza de inmediato sin costo!</p>
             </a>
         </section>
+        <div class="clearfix"></div>
         <section class="package" id="premium">
             <a href="#">
                 <h1 class="package__title">Nuestro Plan PREMIUM</h1>
