centrar el inicio

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -37,7 +37,7 @@
         </section>
         <section id="planes">
             <h1 class="section-title">Escoge tu plan</h1>
-            <div>
+            <div class="plan__list">
                 <article class="plan">
                     <h1 class="plan__title">GRATIS</h1>
                     <h2 class="plan__price">$0/mes</h2>
