--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <header class="titulo-principal">
         <div>
             <a href="../Carpeta2_Rivera.html" class="main-header_brand">
