--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -35,6 +35,7 @@
         <section class="package" id="plus">
             <a href="#">
                 <h1 class="package__title">Nuestro Plan PLUS</h1>
+                <h2 class="package__badge">RECOMENDADO</h2>
                 <h2 class="package__subtitle">La elección más popular de nuestro clientes</h2>
                 <p class="package__info">Beneficios de mejorar el almacenamiento y la rapidez del soporte técnico para lograr tus objetivos </p>
             </a>
