Cambio de cromática y contenido de las paginas

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -7,6 +7,7 @@
     <title>uHost</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="paquetes/paquetesindex.html">
     <link rel="stylesheet" href="paqueteShared.css">
     <link rel="stylesheet" href="mainc2.css"> 
 </head>
@@ -15,38 +16,38 @@
     <header class="titulo-principal">
         <div>
             <a href="Carpeta2_Rivera.html" class="main-header_brand">
-                uHost
+                Travel EC
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="file:///C:/Users/Kasita/Desktop/mi%20sitio%20web/paquetes/paquetesindex.html">Paquetes</a>
+                    <a href="paquetes/paquetesindex.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
                     <a href="clientes/Carpeta2_Rivera.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="hosting/Carpeta2_Rivera.html">Hosting</a>
+                    <a href="hosting/Carpeta2_Rivera.html">Información</a>
                 </li>
             </ul>
         </nav>        
     </header>
     <main>
         <section id="descripcion-del-producto">
-            <h1>Obtén la libertad que mereces</h1>
+            <h1>Conoce Ecuador</h1>
         </section>
         <section id="planes">
             <h1 class="section-title">Escoge tu plan</h1>
             <div class="plan__list">
                 <article class="plan">
-                    <h1 class="plan__title">GRATIS</h1>
-                    <h2 class="plan__price">$0/mes</h2>
-                    <h3>Para pasatiempos o pequeños grupos</h3>
+                    <h1 class="plan__title">BÁSICO</h1>
+                    <h2 class="plan__price">$99</h2>
+                    <h3> Baños y Laguna de Quitola</h3>
                     <ul class="plan__features">
-                        <li class="plan__feature">1 Espacio de Trabajo</li>
-                        <li class="plan__feature">Tráfico ilimitado</li>
-                        <li class="plan__feature">10GB de Almacenamiento</li>
-                        <li class="plan__feature">Soporte básico</li>
+                        <li class="plan__feature">Recorrido privado</li>
+                        <li class="plan__feature">Alojamientos en hotel</li>
+                        <li class="plan__feature">Incluye desayuno y refrigerio</li>
+                        <li class="plan__feature">1 día</li>
                     </ul>
                     <div>
                         <button class="button">ESCOGER PLAN </button>
@@ -55,13 +56,13 @@
                 <article class="plan plan--highlighted">
                     <h1 class="plan__annotation">RECOMENDADO</h1>
                     <h1 class="plan__title">PLUS</h1>
-                    <h2 class="plan__price">$29/mes</h2>
-                    <h3>Para proyectos ambiciosos</h3>
+                    <h2 class="plan__price">$170</h2>
+                    <h3>Baños de Agua Santa</h3>
                     <ul class="plan__features">
-                        <li class="plan__feature">5 Espacios de Trabajo</li>
-                        <li class="plan__feature">Tráfico ilimitado</li>
-                        <li class="plan__feature">100Gb de Almacenamiento</li>
-                        <li class="plan__feature">Soporte Plus</li>
+                        <li class="plan__feature">Guía</li>
+                        <li class="plan__feature">Alojamientos en hotel</li>
+                        <li class="plan__feature">Incluye desayunos y almuerzos>
+                        <li class="plan__feature">3 días</li>
                     </ul>
                     <div>
                         <button class="button">ESCOGER PLAN </button>
@@ -69,13 +70,13 @@
                 </article>
                 <article class="plan">
                     <h1 class="plan__title">PREMIUM</h1>
-                    <h2 class="plan__price">$99/mes</h2>
-                    <h3>Su solución empresarial</h3>
+                    <h2 class="plan__price">$215</h2>
+                    <h3>Tena</h3>
                     <ul class="plan__features">
-                        <li class="plan__feature">10 Espacios de Trabajo</li>
+                        <li class="plan__feature">Guía biligue</li>
                         <li class="plan__feature">Tráfico ilimitado</li>
-                        <li class="plan__feature" >Almacenamiento ilimitado</li>
-                        <li class="plan__feature">Soporte prioritario</li>
+                        <li class="plan__feature">Incluye 3 comidas por día</li>
+                        <li class="plan__feature">5 días</li>
                     </ul>
                     <div>
                         <button class="button">ESCOGER PLAN</button>
@@ -84,25 +85,25 @@
             </div>
         </section>
         <section id="key-features">
-            <h1 class="section-title">Buenas razones para quedarse</h1>
+            <h1 class="section-title">¿Por qué elegirnos?</h1>
             <ul class="key-feature__list">
                 <li class="key-feature">
                     <div class="key-feature__image">
 
                     </div>
-                    <p class="key-feature__description">3,857,000 Clientes satisfechos </p>
+                    <p class="key-feature__description">857,000 Clientes satisfechos </p>
                 </li>
                 <li class="key-feature">
                     <div class="key-feature__image">
 
                     </div>
-                    <p class="key-feature__description">99.999% Garantía</p>
+                    <p class="key-feature__description">Guías especializados</p>
                 </li>
                 <li class="key-feature">
                     <div class="key-feature__image">
 
                     </div>
-                    <p class="key-feature__description">Iluminación rápido CDN</p>
+                    <p class="key-feature__description">Precauciones contra el Covid-19</p>
                 </li>
             </ul>
         </section>
