--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -26,7 +26,7 @@
                     <a href="../clientes/Carpeta2_Rivera.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../hosting/Carpeta2_Rivera.html">Hosting</a>
+                    <a href="../hosting/Carpeta2_Rivera.html">Información</a>
                 </li>
             </ul>
         </nav>        
@@ -34,25 +34,25 @@
     <main>
         <section class="package" id="plus">
             <a href="#">
-                <h1 class="package__title">Nuestro Plan PLUS</h1>
+                <h1 class="package__title">Nuestro Paquete PLUS</h1>
                 <h2 class="package__badge">RECOMENDADO</h2>
                 <h2 class="package__subtitle">La elección más popular de nuestro clientes</h2>
-                <p class="package__info">Beneficios de mejorar el almacenamiento y la rapidez del soporte técnico para lograr tus objetivos </p>
+                <p class="package__info">3 días y 2 noches en Baños de Agua Santa</p>
             </a>
         </section>
         <section class="package" id="gratis">
             <a href="#">
-                <h1 class="package__title">Nuestro Plan GRATIS</h1>
-                <h2 class="package__subtitle">Un sólido inicio en el mundo del Hosting</h2>
+                <h1 class="package__title">Nuestro Paquete BÁSICO</h1>
+                <h2 class="package__subtitle">Un recorrido por una de las lagunas más hermosas de Ecuador</h2>
                 <p class="package__info">¡Empieza de inmediato sin costo!</p>
             </a>
         </section>
         <div class="clearfix"></div>
         <section class="package" id="premium">
             <a href="#">
-                <h1 class="package__title">Nuestro Plan PREMIUM</h1>
-                <h2 class="package__subtitle">Todo lo que tu empresa necesita. Soporte instantáneo, garantía</h2>
-                <p class="package__info">La mejor solución por pequeños y grandes empresarios  ¡Porque el Hosting no debería ser un obstáculo!</p>
+                <h1 class="package__title">Nuestro Paquete PREMIUM</h1>
+                <h2 class="package__subtitle">Una experiencia para compartir</h2>
+                <p class="package__info">Viva la experiencia de conocer diferentes comunidades en la Amazonía de Ecuador</p>
             </a>
         </section>
     </main>
