Arreglo de la barra y botón de información

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -7,7 +7,7 @@
     <title>uHost</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="paquetes/paquetesindex.html">
+    <link rel="stylesheet" href="../mi sitio web/paquetes/packages.css">
     <link rel="stylesheet" href="paqueteShared.css">
     <link rel="stylesheet" href="mainc2.css"> 
 </head>
@@ -16,7 +16,7 @@
     <header class="titulo-principal">
         <div>
             <a href="Carpeta2_Rivera.html" class="main-header_brand">
-                Travel EC
+                Travel
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
@@ -27,7 +27,7 @@
                     <a href="clientes/Carpeta2_Rivera.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="hosting/Carpeta2_Rivera.html">Información</a>
+                    <a href="../mi sitio web/paquetes/paquetesindex.html">Información</a>
                 </li>
             </ul>
         </nav>        
