--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -15,7 +15,7 @@
     <header class="titulo-principal">
         <div>
             <a href="../Carpeta2_Rivera.html" class="main-header_brand">
-                uHost
+                Travel
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
