Carpeta 7, ajustes en la página de inicio

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -16,7 +16,7 @@
     <header class="titulo-principal">
         <div>
             <a href="Carpeta2_Rivera.html" class="main-header_brand">
-                Travel
+                <img src="../mi sitio web/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
