Carpeta 7, creación de la página de clientes

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -24,7 +24,7 @@
                     <a href="paquetes/paquetesindex.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="clientes/Carpeta2_Rivera.html">Clientes</a>
+                    <a href="../mi sitio web/Clientes/index.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
                     <a href="../mi sitio web/paquetes/paquetesindex.html">Información</a>
