--- a/paquetes/paquetesindex.html
+++ b/paquetes/paquetesindex.html
@@ -15,15 +15,15 @@
     <header class="titulo-principal">
         <div>
             <a href="../Carpeta2_Rivera.html" class="main-header_brand">
-                Travel
+                <img src="../mi sitio web/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="paquetesindex.html">Paquetes</a>
+                    <a href="../paquetesindex.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="../clientes/Carpeta2_Rivera.html">Clientes</a>
+                    <a href="../Clientes/index.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
                     <a href="../hosting/Carpeta2_Rivera.html">Información</a>
