Carpeta 7, cambios finales

--- a/Carpeta2_Rivera.html
+++ b/Carpeta2_Rivera.html
@@ -89,19 +89,19 @@
             <ul class="key-feature__list">
                 <li class="key-feature">
                     <div class="key-feature__image">
-
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="#000000" stroke="#000000"><g transform="matrix(2,0,0,2,0,0)"><circle cx="4.974" cy="14.75" r="2.625" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><path d="M9.2 21.125a4.474 4.474 0 0 0-8.449 0" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><circle cx="19.026" cy="14.75" r="2.625" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><path d="M23.25 21.125a4.474 4.474 0 0 0-8.449 0" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><circle cx="6" cy="3.375" r=".5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><circle cx="12" cy="3.375" r=".5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><circle cx="18" cy="3.375" r=".5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle></g></svg>  
                     </div>
                     <p class="key-feature__description">857,000 Clientes satisfechos </p>
                 </li>
                 <li class="key-feature">
                     <div class="key-feature__image">
-
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="#000000" stroke="#000000"><g transform="matrix(2,0,0,2,0,0)"><circle cx="18.5" cy="4.163" r="3.375" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><path d="M23.25 11.288a6.026 6.026 0 0 0-9.5 0m8.125-7.013A6.779 6.779 0 0 1 20 4.538a6.729 6.729 0 0 1-4.568-1.78" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><circle cx="5.5" cy="16.163" r="3.375" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><path d="M10.249 23.288a6.026 6.026 0 0 0-9.5 0m8.126-7.014a6.762 6.762 0 0 1-6.443-1.516" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><circle cx="12.5" cy="19.538" r=".5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><circle cx="15.5" cy="16.538" r=".5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><circle cx="18.5" cy="13.538" r=".5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><circle cx="5.271" cy="5.212" r="4.5" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></circle><path d="m3.471 5.662.975.974a.45.45 0 0 0 .684-.056l1.941-2.718" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path></g></svg>
                     </div>
                     <p class="key-feature__description">Guías especializados</p>
                 </li>
                 <li class="key-feature">
                     <div class="key-feature__image">
-
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="#000000" stroke="#000000"><g transform="matrix(2,0,0,2,0,0)"><path d="M17.25 20.25a.375.375 0 1 1-.375.375.375.375 0 0 1 .375-.375m0-2.25v-3" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><path d="M23.063 20.682a1.774 1.774 0 0 1-1.587 2.568h-8.452a1.774 1.774 0 0 1-1.587-2.568l4.226-8.451a1.774 1.774 0 0 1 3.174 0zm-18.88-7.928H2.162a1.413 1.413 0 0 1 0-2.825h2.021m5.746-5.746V2.162a1.413 1.413 0 0 1 2.825 0v2.021" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><path d="M15.405 5.28a7.3 7.3 0 0 0-8.128 0M18.288 9.1a7.256 7.256 0 0 0-.888-1.823M7.277 17.4a7.282 7.282 0 0 0 1.959.926M5.28 7.277a7.3 7.3 0 0 0 0 8.128" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path><path d="M6.848 9.511a1.61 1.61 0 0 0-.471-1.137L4.518 6.515a1.412 1.412 0 0 1 2-2l1.856 1.862a1.61 1.61 0 0 0 1.137.471m0 8.987a1.606 1.606 0 0 0-1.137.471l-1.859 1.859a1.412 1.412 0 0 1-2-2l1.859-1.86a1.608 1.608 0 0 0 .471-1.136m6.327-6.321a1.608 1.608 0 0 0 1.136-.471l1.86-1.859a1.412 1.412 0 0 1 2 2l-1.862 1.856" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"></path></g></svg>
                     </div>
                     <p class="key-feature__description">Precauciones contra el Covid-19</p>
                 </li>
