CAMBIOS EN LA ORGANIZACIÓN DE LA CARPETA

--- a/Clientes/main.html
+++ b/Clientes/main.html
@@ -7,25 +7,25 @@
     <title>TRAVEL Clientes</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../paqueteShared.css">
-    <link rel="stylesheet" href="clientes.css">
+    <link rel="stylesheet" href="../Clientes/index.css">
 </head>
 <body>
-   
+   <div class="backdrop"></div>
     <header class="titulo-principal">
         <div>
-            <a href="../Carpeta2_Rivera.html" class="main-header_brand">
-                <img src="../LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
+            <a href="../main.html" class="main-header_brand">
+                <img src="../Imagenes/LOGOTIPO.jpg.png" alt="Travel" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
-                    <a href="../paquetes/paquetesindexs.html">Paquetes</a>
+                    <a href="../paquetes/main.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="index.html">Clientes</a>
+                    <a href="main.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../paquetes/paquetesindex.html">Información</a>
+                    <a href="../paquetes/main.html">Información</a>
                 </li>
             </ul>
         </nav>        
@@ -34,7 +34,7 @@
         <div>
             <div class="testimonio" id="cliente-1"></div>
                 <div class="testimonio__image-container">
-                    <img src="../cliente1.jpg" alt="Andrea López - Cliente" class="testimonio__image">
+                    <img src="../Imagenes/cliente1.jpg" alt="Andrea López - Cliente" class="testimonio__image">
                 </div>
                 <div class="testimonio__info">
                     <h1 class="testimonio__nombre">Andrea López</h1>    
@@ -45,7 +45,7 @@
                 </div>
                 <div class="testimonio" id="cliente-2"></div>
                 <div class="testimonio__image-container">
-                    <img src="../cliente2.jpg" alt="Andrea López . Cliente" class="testimonio__image">
+                    <img src="../Imagenes/cliente2.jpg" alt="Andrea López . Cliente" class="testimonio__image">
                 </div>
                 <div class="testimonio__info">
                     <h1 class="testimonio__nombre">Juan Malo</h1>    
