--- a/main.html
+++ b/main.html
@@ -9,14 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../mi sitio web/paquetes/packages.css">
     <link rel="stylesheet" href="paqueteShared.css">
-    <link rel="stylesheet" href="mainc2.css"> 
+    <link rel="stylesheet" href="index.css"> 
+    <link rel="stylesheet" href="Imagenes/freedom.jpg">
 </head>
 
 <body>
     <header class="titulo-principal">
         <div>
-            <a href="Carpeta2_Rivera.html" class="main-header_brand">
-                <img src="../mi sitio web/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
+            <a href="main.html" class="main-header_brand">
+                <img src="../Katherine Rivera/Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
@@ -24,10 +25,10 @@
                     <a href="paquetes/paquetesindex.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="../mi sitio web/Clientes/index.html">Clientes</a>
+                    <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../mi sitio web/paquetes/paquetesindex.html">Información</a>
+                    <a href="../Katherine Rivera/paquetes/main.html">Información</a>
                 </li>
             </ul>
         </nav>        
@@ -35,7 +36,11 @@
     <main>
         <section id="descripcion-del-producto">
             <h1>Conoce Ecuador</h1>
+            <a href="../main.html" class="main-header_brand">
+                <img src="../Katherine Rivera/Imagenes/freedom.jpg" alt="" >
+            </a>
         </section>
+        
         <section id="planes">
             <h1 class="section-title">Escoge tu plan</h1>
             <div class="plan__list">
