--- a/paquetes/main.html
+++ b/paquetes/main.html
@@ -14,8 +14,8 @@
     <div class="background"></div>
     <header class="titulo-principal">
         <div>
-            <a href="../Carpeta2_Rivera.html" class="main-header_brand">
-                <img src="../mi sitio web/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
+            <a href="../main.html" class="main-header_brand">
+                <img src="../Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
         </div><nav class="main-nav">
             <ul class="main-nav_items">
@@ -23,10 +23,10 @@
                     <a href="../paquetesindex.html">Paquetes</a>
                 </li>
                 <li class="main-nav_item">
-                    <a href="../Clientes/index.html">Clientes</a>
+                    <a href="../Clientes/main.html">Clientes</a>
                 </li>
                 <li class="main-nav_item main-nav_item--cta">
-                    <a href="../hosting/Carpeta2_Rivera.html">Información</a>
+                    <a href="../paquetes/main.html">Información</a>
                 </li>
             </ul>
         </nav>        
