--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="backdrop"></div>
     <header class="titulo-principal">
         <div>
             <a href="main.html" class="main-header_brand">
