--- a/Clientes/main.html
+++ b/Clientes/main.html
@@ -13,6 +13,11 @@
    <div class="backdrop"></div>
     <header class="titulo-principal">
         <div>
+            <button class="toggle-button">
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+            </button>
             <a href="../main.html" class="main-header_brand">
                 <img src="../Imagenes/LOGOTIPO.jpg.png" alt="Travel" >
             </a>
@@ -31,6 +36,19 @@
         </nav>        
     </header>
     <main>
+        <nav class="mobile-nav">
+            <ul class="mobile-nav__items">
+                <li class="mobile-nav__item">
+                    <a href="../Katherine Rivera/paquetes/main.html">Paquetes</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+                </li>
+            </ul>
+        </nav>
         <div>
             <div class="testimonio" id="cliente-1"></div>
                 <div class="testimonio__image-container">
@@ -68,5 +86,6 @@
         </nav>
 
     </footer>
+    <script src="../Katherine Rivera/shared.js"></script>
 </body>
 </html>
