--- a/main.html
+++ b/main.html
@@ -7,20 +7,34 @@
     <title>uHost</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../mi sitio web/paquetes/packages.css">
+    <link rel="stylesheet" href="../Katherine Rivera/paquetes/packages.css">
     <link rel="stylesheet" href="paqueteShared.css">
     <link rel="stylesheet" href="index.css"> 
-    <link rel="stylesheet" href="Imagenes/freedom.jpg">
+    <link rel="stylesheet" href="../Katherine Rivera/Imagenes/freedom.jpg">
 </head>
 
 <body>
     <div class="backdrop"></div>
+    <div class="modal">
+        <h1 class="modal__title">¿Quieres continuar?</h1>
+        <div class="modal__actions">
+            <a href="start-hosting/index.html" class="modal__action"> ¡Sí!</a>
+            <button class="modal__action modal__action--negative" type="button">¡No!</button>
+        </div>
+    </div>
+
     <header class="titulo-principal">
         <div>
+            <button class="toggle-button">
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+                <span class="toggle-button__bar"></span>
+            </button>
             <a href="main.html" class="main-header_brand">
                 <img src="../Katherine Rivera/Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
             </a>
-        </div><nav class="main-nav">
+        </div>
+        <nav class="main-nav">
             <ul class="main-nav_items">
                 <li class="main-nav_item">
                     <a href="paquetes/paquetesindex.html">Paquetes</a>
@@ -34,11 +48,28 @@
             </ul>
         </nav>        
     </header>
+
+    <nav class="mobile-nav">
+        <ul class="mobile-nav__items">
+            <li class="mobile-nav__item">
+                <a href="../Katherine Rivera/paquetes/main.html">Paquetes</a>
+            </li>
+            <li class="mobile-nav__item">
+                <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+            </li>
+            <li class="mobile-nav__item">
+                <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+            </li>
+        </ul>
+    </nav>
+
     <main>
         <section id="descripcion-del-producto">
             <h1>Conoce Ecuador</h1>
             <a href="../main.html" class="main-header_brand">
+               <div class="imagen">
                 <img src="../Katherine Rivera/Imagenes/freedom.jpg" alt="" >
+            </div>
             </a>
         </section>
         
@@ -127,5 +158,6 @@
             </ul>
         </nav>
     </footer>
+    <script src="../Katherine Rivera/shared.js"></script>
 </body>
 </html>  
