--- a/paquetes/main.html
+++ b/paquetes/main.html
@@ -11,8 +11,14 @@
 </head>
 
 <body>
+    <div class="backdrop"></div>
     <div class="background"></div>
     <header class="titulo-principal">
+        <button class="toggle-button">
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+            <span class="toggle-button__bar"></span>
+        </button>
         <div>
             <a href="../main.html" class="main-header_brand">
                 <img src="../Imagenes/LOGOTIPO.jpg.png" alt="Viaja por Ecuador" >
@@ -32,6 +38,19 @@
         </nav>        
     </header>
     <main>
+        <nav class="mobile-nav">
+            <ul class="mobile-nav__items">
+                <li class="mobile-nav__item">
+                    <a href="../Katherine Rivera/paquetes/main.html">Paquetes</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="../Katherine Rivera/Clientes/main.html">Clientes</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="../Katherine Rivera/paquetes/main.html">Información</a>
+                </li>
+            </ul>
+        </nav> 
         <section class="package" id="plus">
             <a href="#">
                 <h1 class="package__title">Nuestro Paquete PLUS</h1>
@@ -68,5 +87,6 @@
             </ul>
         </nav>
     </footer>
+    <script src="../Katherine Rivera/shared.js"></script>
 </body>
 </html>  
