Imágenes de fondo

--- a/Media queries/index.html
+++ b/Media queries/index.html
@@ -21,15 +21,15 @@
             <article class="cards-item">
                 <h2> Precio 1</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum commodi consequatur et nobis perspiciatis earum ad magnam, amet ipsa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
-                <article class="cards-item">
+             <article class="cards-item only-xbs">
                     <h2> Precio 1</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum commodi consequatur et nobis perspiciatis earum ad magnam, amet ipsa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
-                </article>
-                <article class="cards-item">
+             </article>
+             <article class="cards-item only-xbs">
                     <h2> Precio 1</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum commodi consequatur et nobis perspiciatis earum ad magnam, amet ipsa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
-                </article>
-                <article class="cards-item">
+            </article>
+            <article class="cards-item only-xbs">
                     <h2> Precio 1</h2>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum commodi consequatur et nobis perspiciatis earum ad magnam, amet ipsa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
             </article>
