implementacion de media queries en el archivo principal

--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="paqueteShared.css">
     <link rel="stylesheet" href="index.css"> 
     <link rel="stylesheet" href="../Katherine Rivera/Imagenes/freedom.jpg">
+    <link rel="stylesheet" href="../Katherine Rivera/Media queries/style.css">
 </head>
 
 <body>
@@ -120,6 +121,36 @@
                     </div>
                 </article>
             </div>
+
+
+            <section class="cards">
+                <div class="cards-container">
+                    <article class="cards-item">
+                        <h2> Precio 1</h2>
+                        <p>Lorem ipsum, dom ad magnam, amet ipsa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
+                    </article>
+                    <article class="cards-item">
+                        <h2> Precio 2</h2>
+                        <p>Lorem ipsum, Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
+                    </article>
+                    <article class="cards-item">
+                        <h2> Precio 3</h2>
+                        <p>Lorem ipsum, doomnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
+                     <article class="cards-item only-xbs">
+                        <h2> Precio 4</h2>
+                        <p>Lorem ipsum, amet ipsa? Doloribuima voluptatibus fugiat impedit minus a autem.</p>
+                     </article>
+                     <article class="cards-item only-xbs">
+                        <h2> Precio 5</h2>
+                         <p>Lorem ipsum, dolorsa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
+                    </article>
+                    <article class="cards-item only-xbs">
+                            <h2> Precio 6</h2>
+                            <p>Lorem ipsum, dolor sit psa? Doloribus omnis ex itaque minima voluptatibus fugiat impedit minus a autem.</p>
+                    </article>
+                </div>
+            </section>
+
         </section>
         <section id="key-features">
             <h1 class="section-title">¿Por qué elegirnos?</h1>
@@ -144,6 +175,7 @@
                 </li>
             </ul>
         </section>
+        
 
     </main>
     <footer class="main-footer">
